--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,18 @@
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable-dynamic-subset.min.css');
+@import url('https://cdn.jsdelivr.net/npm/firacode/distr/fira_code.min.css');
+
 html,
 body,
 :root,
 #root {
+  margin: 0;
+  padding: 0;
   min-height: 100vh;
   color-scheme: light dark;
   // TODO: Chrome is not supported yet
   // background-color: light-dark(white, #333);
   // color: light-dark(black, white);
+  font-family: 'Pretendard Variable';
   transition:
     background-color 0.2s,
     color 0.2s;
@@ -29,4 +35,15 @@ body,
     background-color: #333;
     color: white;
   }
+}
+
+* {
+  transition:
+    background-color 0.2s,
+    border-color 0.2s,
+    color 0.02s;
+}
+pre,
+code {
+  font-family: 'Fira Code';
 }
